2001-12-16  Gediminas Paulauskas <menesis@delfi.lt>

	* gnome-desktop/gnome-ditem-edit.c: get translations from
	GETTEXT_PACKAGE domain and with UTF-8 codeset, so that translations
	work when library is used outside of gnome-core.

Fri Dec 14 16:43:23 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.c: simplify and complete the %? substitution.
	  Now %f and friends behave in a more predictable way.  If there
	  are multiple instances on the command line you get the
	  same file.  This also fixes other corner cases and simplifies what
	  we do.  It's also more predictable, and makes more sense.  Things
	  may still be weird if you use both %u and %f on the same line,
	  but then you deserve what you get.

Fri Dec 14 15:58:06 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.[ch], gnome-ditem-edit.[ch]: added some needed
	  API.  One for setting location as file, and setting a directory
	  only editor and setting initial type string.

Sun Dec 09 15:22:03 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.c: actually set the real_argc for launching and
	  also actually add elements to the argv array

Sat Dec 08 11:27:35 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.[ch]: Make launching standards compliant and
	  realize that the standard sucks donkeyballs.  It's utterly
	  ambiguous.  I try to handle the corner cases but I dunno if I'm
	  right.  Needs more clarification.

2001-12-06  Alexander Larsson  <alla@lysator.liu.se>

	* gnome-desktop-item.c (gnome_desktop_item_new_from_uri):
	Remove old stat code.
	(gnome_desktop_item_save): Don't do magic non-abs path stuff
	to the location, it is supposed to be an uri.
	(gnome_desktop_item_get_file_status):
	Use gnome-vfs instead of stat.

Sun Dec  2 13:05:05 2001  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am gnome-desktop.pc.in: Add a pc
	file for this library.

2001-11-30  Seth Nickell  <snickell@stanford.edu>

	* gnome-desktop-item.c: (get_encoding):
