@@ -1,3 +1,10 @@
+Wed Dec 19 18:23:17 2001  George Lebl <jirka@5z.com>
+
+	* gnome-desktop-item.[ch]: add a find_icon function which
+	  doesn't work only on desktop items but no matter how you got the
+	  icon name.  Also deal with sizes and only look in kde hicolor
+	  dirs.
+
 2001-12-16  Gediminas Paulauskas <menesis@delfi.lt>
 
 	* gnome-desktop/gnome-ditem-edit.c: get translations from
